--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,9 +25,10 @@ jobs:
         steps:
             # This action checks-out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
             - name: Get the code
-              uses: actions/checkout@v4            
-            # Set up Java
-            - name: Set up JDK 8
+              uses: actions/checkout@v4    
+
+            # Setup Java
+            - name: Setup JDK 8
               uses: actions/setup-java@v4
               with:
                 distribution: 'adopt-hotspot'
@@ -36,6 +37,28 @@ jobs:
                 cache: maven
                 #Value of the distributionManagement/repository/id field of the pom.xml
                 server-id: github
+
+            # Setup JFrog CLI
+            - name: Setup JFrog CLI
+              uses: jfrog/setup-jfrog-cli@v4
+              env:
+                # JFrog platform url (for example: https://acme.jfrog.io)
+                JF_URL: ${{ secrets.JFOG_URL }}           
+                # Basic authentication credentials
+                JF_USER: ${{ secrets.JFROG_USER }}
+                JF_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
+
+            # Configure Maven settings
+            - name: JFrog Maven Configuration
+              run: |
+                jf mvn-config --repo-deploy-releases mule-libs-release-local \
+                              --repo-deploy-snapshots mule-libs-snapshot-local
+
+            # Set build variables                 
+            - name: Set build variables
+              run: |
+                echo "BUILD_NAME=$(echo ${GITHUB_REPOSITORY#*/})" >> "$GITHUB_ENV"  
+                echo "BUILD_NUMBER=$GITHUB_RUN_NUMBER" >> "$GITHUB_ENV"
 
             # Run the tests
             - name: Test the compiled source code
@@ -54,10 +77,16 @@ jobs:
             # Replace the snapshot version with a release candidate version.
             # Deploy the jar to GitHub registry
             # Build next snapshot version.
-            - name: Prepare and perform release              
+            - name: Prepare and perform release            
+              if: ${{ env.CLOUDHUB_ENVIRONMENT != 'Production' }}
               run: mvn -B release:prepare release:perform
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            # Collect build info
+            - name: Collect build info
+              run: |
+                jf rt bag ${{ env.BUILD_NAME }} ${{ env.BUILD_NUMBER }} .
 
             # Deploy to CloudHub
             - name: Deploy             
@@ -69,3 +98,8 @@ jobs:
                 -Dcloudhub.workerType=${{ env.CLOUDHUB_WORKER_TYPE}} \
                 -Dcloudhub.workers=${{ env.CLOUDHUB_WORKERS}} \
                 -Dcloudhub.region=${{ env.CLOUDHUB_REGION}} \
+
+            # Upload artifact
+            - name: Upload artifact to JFrog repository
+              run: |
+                jf mvn clean install -DskipTests
