continue on error

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -99,6 +99,7 @@ jobs:
 
             # Deploy to CloudHub
             - name: Deploy             
+              continue-on-error: true
               run: |
                 mvn -U -V -e -B -DskipTests deploy --file pom.xml -DmuleDeploy \
                 -Dconn.app.client.id=${{ env.CLOUDHUB_ID}} \
