--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,12 +57,9 @@ jobs:
             # Configure JFrog server
             - name: Config JFrog Server
               run: |  
-                jf c add jfrog
                 jf -v
                 jf mvn-config --repo-deploy-releases mule-libs-release-local \
-                              --repo-deploy-snapshots mule-libs-snapshot-local \
-                              --server-id-deploy jfrog
-
+                              --repo-deploy-snapshots mule-libs-snapshot-local 
             # Set build variables                 
             - name: Set build variables
               run: |
