--- a/.github/workflows/pipeline_pom.yml
+++ b/.github/workflows/pipeline_pom.yml
@@ -46,7 +46,7 @@ jobs:
             - name: Maven Config
               uses: s4u/maven-settings-action@v2.6.0
               with:
-                servers: '[{"id": "central", "username": "${{ secrets.JFROG_USER }}", "password": "${{ secrets.JFROG_PASSWORD }}"} \
+                servers: '[{"id": "central", "username": "${{ secrets.JFROG_USER }}", "password": "${{ secrets.JFROG_PASSWORD }}"}, 
                            {"id": "snapshots", "username": "${{ secrets.JFROG_USER }}", "password": "${{ secrets.JFROG_PASSWORD }}"}]'
           
             # Run the tests
