--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,68 @@
     	<developerConnection>scm:git:https://github.com/tarantsovakseniya/mule-gh-actions.git</developerConnection>
     	<tag>HEAD</tag>
     </scm>	
+	<profiles>
+		<profile>
+			<id>githubDeploy</id>
+			<distributionManagement>
+				<repository>
+					<id>github</id>
+					<name>github</name>
+					<url>https://maven.pkg.github.com/tarantsovakseniya/mule-gh-actions</url>  
+				</repository>
+			</distributionManagement>
+		</profile>
+		<profile>
+			<id>jfrogDeploy</id>
+			<distributionManagement>
+				<repository>
+					<id>central</id>
+					<name>a0pgvplq6uut1-artifactory-primary-0-releases</name>
+					<url>https://ktorg.jfrog.io/artifactory/mule-libs-release-local</url>
+				</repository>
+				<snapshotRepository>
+					<id>snapshots</id>
+					<name>a0pgvplq6uut1-artifactory-primary-0-snapshots</name>
+					<url>https://ktorg.jfrog.io/artifactory/mule-libs-snapshot</url>
+				</snapshotRepository>
+			</distributionManagement>
+		</profile>
+		<profile>
+			<id>muleDeploy</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.mule.tools.maven</groupId>
+						<artifactId>mule-maven-plugin</artifactId>
+						<version>${mule.maven.plugin.version}</version>
+						<extensions>true</extensions>
+						<configuration>
+							<cloudHubDeployment>
+								<uri>https://anypoint.mulesoft.com</uri>
+								<muleVersion>${mule.version}</muleVersion>
+								<connectedAppClientId>${conn.app.client.id}</connectedAppClientId>
+								<connectedAppClientSecret>${conn.app.client.secret}</connectedAppClientSecret>
+								<connectedAppGrantType>client_credentials</connectedAppGrantType>
+								<applicationName>${project.artifactId}</applicationName>
+								<environment>${cloudhub.environment}</environment>
+								<workerType>${cloudhub.workerType}</workerType>
+								<workers>${cloudhub.workers}</workers>
+								<region>${cloudhub.region}</region>
+								<objectStoreV2>true</objectStoreV2>
+								<properties>
+									<maven.compiler.source>1.8</maven.compiler.source>
+									<maven.compiler.target>1.8</maven.compiler.target>
+									<mule.env>${cloudhub.environment}</mule.env>
+		<!-- 						<mule.encryption.key>${mule.encryption.key}</mule.encryption.key> -->
+								</properties>
+							</cloudHubDeployment>
+							<classifier>mule-application</classifier>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 	<build>
 		<plugins>
 			<plugin>
@@ -38,34 +100,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
 				<version>3.2.0</version>
-			</plugin>
-			<plugin>
-				<groupId>org.mule.tools.maven</groupId>
-				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-					<cloudHubDeployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>${mule.version}</muleVersion>
-		                <connectedAppClientId>${conn.app.client.id}</connectedAppClientId>
-		                <connectedAppClientSecret>${conn.app.client.secret}</connectedAppClientSecret>
-		                <connectedAppGrantType>client_credentials</connectedAppGrantType>
-						<applicationName>${project.artifactId}</applicationName>
-						<environment>${cloudhub.environment}</environment>
-						<workerType>${cloudhub.workerType}</workerType>
-						<workers>${cloudhub.workers}</workers>
-						<region>${cloudhub.region}</region>
-						<objectStoreV2>true</objectStoreV2>
-						<properties>
-							<maven.compiler.source>1.8</maven.compiler.source>
-							<maven.compiler.target>1.8</maven.compiler.target>
-							<mule.env>${cloudhub.environment}</mule.env>
-<!-- 						<mule.encryption.key>${mule.encryption.key}</mule.encryption.key> -->
-						</properties>
-					</cloudHubDeployment>
-					<classifier>mule-application</classifier>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -111,18 +145,5 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-
-	<distributionManagement>
-		<repository>
-			<id>central</id>
-			<name>a0pgvplq6uut1-artifactory-primary-0-releases</name>
-			<url>https://ktorg.jfrog.io/artifactory/mule-libs-release-local</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>a0pgvplq6uut1-artifactory-primary-0-snapshots</name>
-			<url>https://ktorg.jfrog.io/artifactory/mule-libs-snapshot</url>
-		</snapshotRepository>
-	</distributionManagement>
 
 </project>
