--- a/.github/workflows/pipeline_pom.yml
+++ b/.github/workflows/pipeline_pom.yml
@@ -68,23 +68,23 @@ jobs:
             # Build next snapshot version.
             - name: Prepare and perform release            
               if: github.event.inputs.release == 'true'
-              run: mvn -B release:prepare release:perform
+              run: mvn -B release:prepare release:perform -PgithubDeploy
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+            # Upload artifact
+            - name: Upload artifact to JFrog repository
+              run: |
+                mvn deploy -DskipTests -DjfrogDeploy
 
             # Deploy to CloudHub
             - name: Deploy             
               continue-on-error: true
               run: |
-                mvn -U -V -e -B -DskipTests deploy --file pom.xml -DmuleDeploy \
+                mvn -U -V -e -B -DskipTests deploy --file pom.xml -DmuleDeploy -PmuleDeploy \
                 -Dconn.app.client.id=${{ env.CLOUDHUB_ID}} \
                 -Dconn.app.client.secret=${{ env.CLOUDHUB_SECRET}} \
                 -Dcloudhub.environment=${{ env.CLOUDHUB_ENVIRONMENT}} \
                 -Dcloudhub.workerType=${{ env.CLOUDHUB_WORKER_TYPE}} \
                 -Dcloudhub.workers=${{ env.CLOUDHUB_WORKERS}} \
                 -Dcloudhub.region=${{ env.CLOUDHUB_REGION}} \
-
-            # Upload artifact
-            - name: Upload artifact to JFrog repository
-              run: |
-                mvn deploy -DskipTests
