--- a/.github/workflows/pipeline_jfrog_cli.yml
+++ b/.github/workflows/pipeline_jfrog_cli.yml
@@ -104,7 +104,7 @@ jobs:
             - name: Deploy             
               continue-on-error: true
               run: |
-                mvn -U -V -e -B -DskipTests deploy --file pom.xml -DmuleDeploy -PmuleDeploy \
+                mvn -U -V -e -B -DskipTests deploy --file pom.xml -DmuleDeploy \
                 -Dconn.app.client.id=${{ env.CLOUDHUB_ID}} \
                 -Dconn.app.client.secret=${{ env.CLOUDHUB_SECRET}} \
                 -Dcloudhub.environment=${{ env.CLOUDHUB_ENVIRONMENT}} \
