--- a/.github/workflows/pipeline_jfrog_cli.yml
+++ b/.github/workflows/pipeline_jfrog_cli.yml
@@ -91,7 +91,7 @@ jobs:
             # Build next snapshot version.
             - name: Perform release            
               if: github.event.inputs.release == 'true'
-              run: mvn -B release:prepare release:perform -PgithubDeploy
+              run: mvn -B release:prepare -PgithubDeploy
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               
