--- a/.github/workflows/pipeline_jfrog_cli.yml
+++ b/.github/workflows/pipeline_jfrog_cli.yml
@@ -94,16 +94,15 @@ jobs:
               run: mvn -B release:prepare -PgithubDeploy
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              
+ 
             - run: |
-                cd target
+                cd ~/.m2/repository/com/mycompany
                 ls
-            
-            
+                
             # # Upload artifact
-            # - name: Upload artifact to JFrog repository
-            #   run: |
-            #     jf mvn install -DskipTests -PjfrogDeploy
+            - name: Upload artifact to JFrog repository
+              run: |
+                jf mvn deploy:deploy-file -DskipTests -PjfrogDeploy -file=target/*.jar
 
             # # Deploy to CloudHub
             # - name: Deploy             
