--- a/.github/workflows/pipeline_jfrog_cli.yml
+++ b/.github/workflows/pipeline_jfrog_cli.yml
@@ -87,18 +87,18 @@ jobs:
                 jf rt bag ${{ env.BUILD_NAME }} ${{ env.BUILD_NUMBER }} .
 
             # Replace the snapshot version with a release candidate version.
-            # Deploy the jar to GitHub registry
-            # Build next snapshot version.
             - name: Perform release            
               if: github.event.inputs.release == 'true'
-              run: mvn -B release:prepare -PgithubDeploy
+              run: mvn build-helper:parse-version versions:set \
+                -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} \
+                versions:commit
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             # # Upload artifact
             - name: Upload artifact to JFrog repository
               run: |
-                jf mvn deploy:deploy-file -DskipTests -PjfrogDeploy -file=target/*.jar
+                jf mvn install -DskipTests -PjfrogDeploy
 
             # # Deploy to CloudHub
             # - name: Deploy             
