--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,25 @@
 							<classifier>mule-application</classifier>
 						</configuration>
 					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>build-helper-maven-plugin</artifactId>
+						<version>3.5.0</version>
+						<executions>
+						<execution>
+							<id>parse-version</id>
+							<goals>
+								<goal>parse-version</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>released-version</id>
+							<goals>
+								<goal>released-version</goal>
+							</goals>
+						</execution>
+						</executions>
+					</plugin>
 		</plugins>
 	</build>
 
