--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@
 			<version>1.2.3</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/versions-maven-plugin -->
+		<dependency>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>versions-maven-plugin</artifactId>
+			<version>2.16.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
