--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,20 @@
 						</execution>
 						</executions>
 					</plugin>
+					<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>versions-maven-plugin</artifactId>
+					<version>2.16.2</version>
+					<reportSets>
+						<reportSet>
+						<reports>
+							<report>dependency-updates-report</report>
+							<report>plugin-updates-report</report>
+							<report>property-updates-report</report>
+						</reports>
+						</reportSet>
+					</reportSets>
+					</plugin>
 		</plugins>
 	</build>
 
@@ -128,12 +142,6 @@
 			<artifactId>mule-sockets-connector</artifactId>
 			<version>1.2.3</version>
 			<classifier>mule-plugin</classifier>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/versions-maven-plugin -->
-		<dependency>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>versions-maven-plugin</artifactId>
-			<version>2.16.2</version>
 		</dependency>
 
 	</dependencies>
