--- a/.github/workflows/pipeline_jfrog_cli.yml
+++ b/.github/workflows/pipeline_jfrog_cli.yml
@@ -89,9 +89,7 @@ jobs:
             # Replace the snapshot version with a release candidate version.
             - name: Perform release            
               if: github.event.inputs.release == 'true'
-              run: mvn build-helper:parse-version versions:set \
-                -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} \
-                versions:commit
+              run: mvn build-helper:released-version -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} 
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
